--- a/package.json
+++ b/package.json
@@ -3,10 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svgeact-fontaweso-icons": "^5.15.4",
+    "@fortawesome/rme": "^0.1.17",
+    "@popperjs/core": "^2.11.2",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react-google-login": "^5.2.2",
+    "react-google-button": "^0.7.2",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "5.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
